--- a/style.css
+++ b/style.css
@@ -21,7 +21,72 @@ body{
     align-items: center;
     width: 100vw;
     height: 100vh;
-    background-color: rgba(35, 56, 93, 0.9);
+    background-color: rgba(18, 24, 48, 0.8);
+
+    z-index: 3;
+}
+.result{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 250px;
+    height: 300px;
+    padding: 10px;
+
+    font-size: 0.8rem;
+    font-family: Arial, Helvetica, sans-serif;
+    color: black;
+
+    background-color: white;
+    border-radius: 15px;
+}
+.result h2{
+    display: block;
+    text-align: center;
+    font-weight: 500;
+}
+.result p{
+    display: block;
+    text-align: center;
+    font-size: 1rem;
+}
+.links{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 90%;
+    height: 60px;
+    padding: 5px;
+}
+.links a{
+    width: 50px;
+    height: 100%;
+
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+
+    border-radius: 15px;
+    border: 2px solid var(--borderColor);
+}
+.twitter{
+    background-image: url('./assets/icons/twitter.svg');
+}
+.github{
+    background-image: url('./assets/icons/github-big-logo.svg');
+}
+.result button{
+    width: 90px;
+    height: 40px;
+
+    color: var(--insideColor);
+    font-weight: 600;
+    font-size: 1rem;
+
+    border: none;
+    border-radius: 15px;
+    background-color: var(--secundaryColor);
 }
 main{
     display: flex;
@@ -31,20 +96,76 @@ main{
     width: 100vw;
     height: 100vh;
 }
-/* .main__section{
+.lines-status article{
+    display: none;
+}
+.levels-status{
     display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    width: inherit;
-    height: auto;
-} */
-.status-section{
+    justify-content: space-between;
+    align-items: center;
     width: 288px;
-    height: 70px;
+    height: 100px;
+    padding: 13px;
     margin: 10px 0;
 
-    /* border-radius: 15px; */
     background-color: var(--shadowColor);
+}
+.levels-status article{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 125px;
+    height: 85px;
+    padding: 5px 0;
+
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1rem;
+    color: white;
+
+    border: 2px solid var(--borderColor);
+    background-color: var(--insideColor);
+}
+.status{
+    position: relative;
+    width: 40px;
+    height: 40px;
+}
+.status h2{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: calc(50% - 15px);
+    width: 100%;
+    height: 30px;
+
+    font-weight: 500;
+    font-size: 1.2rem;
+
+    z-index: 2;
+}
+.status svg{
+    width: 50px;
+    height: 50px;
+    transform: translate(-5px, -5px);
+}
+.status svg circle{
+    fill: none;
+    stroke-width: 3;
+    stroke: var(--secundaryColor);
+    transform: translate(5px, 5px);
+
+    stroke-dasharray: 125;
+    stroke-dashoffset: 125;
+    stroke-linecap: round;
+}
+.status svg circle:nth-child(1){
+    stroke-dashoffset: 0;
+    stroke: var(--borderColor);
+}
+.status svg circle:nth-child(2){
+    stroke: var(--secundaryColor);
 }
 .table{
     display: flex;
@@ -97,18 +218,38 @@ main{
     main{
         flex-direction: row;
     }
-    .status-section{
-        width: 110px;
-        height: 110px;
+    .levels-status{
+        width: 130px;
+        height: 130px;
         margin: 0 10px;
     }
-    .shape-status{
-        width: 110px;
-        height: 110px;
+    .lines-status{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 130px;
+        height: 130px;
+        padding: 13px;
         margin: 0 10px;
 
         /* border-radius: 15px; */
         background-color: var(--shadowColor);
+    }
+    .lines-status article{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        width: 125px;
+        height: 95px;
+        padding: 5px 0;
+
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 1rem;
+        color: white;
+
+        border: 2px solid var(--borderColor);
+        background-color: var(--insideColor);
     }
     .main__section{
         display: flex;
@@ -116,5 +257,12 @@ main{
         align-items: flex-start;
         width: inherit;
         height: auto;
+    }
+    .levels-status article:nth-child(1){
+        display: none;
+    }
+    .levels-status article:nth-child(2){
+        justify-content: space-evenly;
+        height: 95px;
     }
 }
